--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
     "helmet": "^8.0.0",
