--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@prisma/client": "^6.0.1",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
+    "argon2": "^0.41.1",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "cookie": "^1.0.2",
     "cors": "^2.8.5",
     "helmet": "^8.0.0",
@@ -29,11 +29,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "prisma": "^6.0.1",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
